@@ -28,25 +28,6 @@ mvn clean install
 mvn javafx:run
 ```
 
-#### or
-
-#### Run from IDE (IntelliJ/Eclipse)
-  1. Open the project as a Maven project.
-  2. Add JavaFX SDK to your module dependencies.
-  3. Set VM options (replace PATH_TO_FX with your JavaFX SDK path):
-
-```bash
---module-path PATH_TO_FX --add-modules javafx.controls,javafx.fxml
-```
-  4. Run the main class:
-```java
-concordia.soen6611.igo_tvm.IGoApplication
-```
-#### Run from command line
-```bash
-java --module-path PATH_TO_FX --add-modules javafx.controls,javafx.fxml -jar target/igo-application-1.0-SNAPSHOT.jar
-```
-
 ## Contributing
 
 Pull requests are welcome. For major changes, please open an issue first
